# multiplatform-vulkan-samples

./: .clang-format  .envrc  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  NEXT.md
cpp/: CMakeLists.txt
cpp/include/mpvk/: command_pool.hpp  device.hpp  instance.hpp  logger.hpp  physical_device.hpp  shader_module.hpp  surface.hpp  swapchain.hpp  window.hpp
cpp/src/: command_pool.cpp  device.cpp  instance.cpp  physical_device.cpp  shader_module.cpp  surface.cpp  swapchain.cpp  window.cpp
docs/: README.md  concepts.md  cpp_notes.md  progress.md  roadmap.md
docs/samples/: 01_device_info.md  02_logical_device.md  03_window_surface.md  04_clear_screen.md  05_hello_triangle.md
samples/: CMakeLists.txt
samples/01_device_info/: CMakeLists.txt  main.cpp
samples/02_logical_device/: CMakeLists.txt  main.cpp
samples/03_window_surface/: CMakeLists.txt  main.cpp
samples/04_clear_screen/: CMakeLists.txt  main.cpp
samples/05_hello_triangle/: CMakeLists.txt  main.cpp
samples/05_hello_triangle/shaders/: triangle.frag  triangle.vert
scripts/: format.sh  install_dependencies_mac.sh  install_dependencies_ubuntu.sh  setup-vulkan-sdk.sh
